# gameboyC

./: .gitignore  CMakeLists.txt  CartridgeBase.h  CpuBase.h  Doxyfile  Makefile  MemoryBase.h  README.txt  Z80.h  Z80Cpu.h  Z80InstructionSet.cpp  Z80InstructionSet.h  cartidge.c  cartidge.h  cartridge.c  cartridge.h  cpu_z80.c  cpu_z80.h  cpu_z80_inst.c  cpu_z80_inst.h  debug.c  debug.h  gameboy  gameboy.c  gameboy.cpp  gpu_gb.c  gpu_gb.h  mbc.c  mbc.h  mbc1Memory.cpp  memory.c  memory.cpp  memory.h  memoryHeaders.h  memoryInterface.h  out.txt  out2.txt  registers.h  test.c
doc/: CHANGELOG.txt  README.txt  TODO.txt
src/: CMakeLists.txt  Doxyfile  gameboy.cpp
src/Cartridge/: CartridgeBase.h  CartridgeHeader.cpp  CartridgeHeader.h  CartridgeLoader.cpp  CartridgeLoader.h  RomCartridge.cpp  RomCartridge.h  RomType.h
src/Common/: Bitfield.h  Color.cpp  Color.h  Config.cpp  Config.h  DebugViewer.h  FileUtils.cpp  FileUtils.h
src/Cpu/: CpuBase.h  Z80.h  Z80Cpu.cpp  Z80Cpu.h  Z80InstructionSet.cpp  Z80InstructionSet.h
src/Cpu/Debug/: Z80BreakPoints.cpp  Z80BreakPoints.h  Z80CmdDebugViewer.cpp  Z80CmdDebugViewer.h  Z80Debugger.cpp  Z80Debugger.h  Z80InstructionMap.cpp  Z80InstructionMap.h
src/Lcd/: Lcd.cpp  Lcd.h  LcdBackground.cpp  LcdBackground.h  LcdComponent.cpp  LcdComponent.h  LcdInterface.h  LcdSprites.cpp  LcdSprites.h
src/Memory/: CartridgeHeader.cpp  CartridgeHeader.h  Memory.cpp  Memory.h  MemoryBase.h  MemoryCustomizer.cpp  MemoryCustomizer.h  MemoryDefs.h  MemoryDesign.txt  MemoryInterface.h  MemoryLoader.cpp  MemoryLoader.h  RomType.h  mbc1Memory.cpp  mbc1Memory.h  mbc2Memory.cpp  mbc2Memory.h  mbc3Memory.cpp  mbc3Memory.h  mbc5Memory.cpp  mbc5Memory.h  memory.cpp  memoryHeaders.h  memoryInterface.h
src/Memory/Customizers/: BasicMemory.cpp  BasicMemory.h  DefaultERam.cpp  DefaultERam.h  DefaultRom.cpp  DefaultRom.h  DmgBoot.cpp  DmgBoot.h  EchoRam.cpp  EchoRam.h  IOMemory.cpp  IOMemory.h  LazyMemory.h  VRam.cpp  VRam.h
src/Window/: GBSDLWindow.cpp  GBSDLWindow.h  GBWindow.h
tests/: CMakeLists.txt
tests/cmake/: internal_utils.cmake
tests/gtest-1.6.0/: Makefile
tests/make/: Makefile  eightBitOpTests  generateTestCarts.py  microOpTests
tests/unittests/: CMakeLists.txt  eightBitLoadTests.cc  eightBitMathTests.cc  eightBitOpTests.cc  flagOpTestBase.cc  flagOpTestBase.h  mathFlagsTests.cc  microOpTestBase.cc  microOpTestBase.h  registerTests.cc  sixteenBitLoadTests.cc  sixteenBitOpTests.cc
tests/unittests/cpu/: CMakeLists.txt
tests/unittests/cpu/microOps/: eightBitLoadTests.cc  eightBitMathTests.cc  flagOpTestBase.cc  flagOpTestBase.h  mathFlagsTests.cc  microOpTestBase.cc  microOpTestBase.h  rotateAndShiftTests.cc  singleBitTests.cc  sixteenBitLoadTests.cc  sixteenBitMathTests.cc
tests/unittests/cpu/register/: registerTests.cc
tests/unittests/memory/: CMakeLists.txt  allMbcMemoryTest.cc  mbc1MemoryTest.cc  mbc2MemoryTest.cc  memoryTestBase.h  noMbcMemoryTest.cc
